# alignment

./: .gitignore  README.md  download_model.py  eval.py  package_project.sh  preprocess.py  pyproject.toml  simple_grpo.ipynb  train_ei.py  train_grpo.py  train_sft.py
configs/ei/: train_config.json
configs/grpo/: train_r1_gsm8k.json  train_r1_math.json
configs/sft/: train_config.json
cs336_alignment/: base_config.py  eval.py  lr.py  utils.py  vllm_utils.py
cs336_alignment/algs/: __init__.py  dpo.py  ei.py  grpo.py  sft.py  utils.py
cs336_alignment/dataset_utils/: gsm8k.py  math.py  mmlu.py
scripts/ei/: train.sh
scripts/sft/: train.sh
tests/: adapters.py  conftest.py  test_dpo.py  test_training_loops.py
tests/_snapshots/: test_get_response_log_probs.npz  test_tokenize_prompt_and_output.npz
tests/fixtures/: tokenized_sft_sample.json
