[project]
name = "alignment"
version = "1.0.0"
description = "Alignment training playground for SFT, expert iteration, and GRPO workflows."
readme = "README.md"
requires-python = ">=3.11,<3.13"  # Python 3.13 not yet supported for some deps
dependencies = [
    "accelerate>=1.5.2",
    "alpaca-eval",
    "flash-attn==2.7.4.post1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "jupyter>=1.1.1",
    "math-verify[antlr4-13-2]>=0.7.0",
    "pylatexenc==2.10",
    "notebook>=7.4.2",
    "pytest>=8.3.5",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "tqdm>=4.67.1",
    "transformers>=4.50.0,<5",
    "typer>=0.15.4",
    "vllm==0.7.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "wandb>=0.19.8",
    "xopen>=2.0.2",
    "dotenv>=0.9.9",
    "rich>=14.0.0",
    "fire>=0.7.0",
]

[tool.setuptools.packages.find]
include = ["cs336_alignment"]

[tool.uv]
package = true
no-build-isolation-package = ["flash-attn"]


[tool.uv.sources]
alpaca-eval = { git = "https://github.com/nelson-liu/alpaca_eval.git", rev = "forward_kwargs_to_vllm" }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4.post1"
requires-dist = ["torch", "einops", "setuptools"]
